
2008-01-19  Roland Mas  <lolando@debian.org>

	* cronjobs/massmail.php: Added missing i18n on the mass mail cron
	script.

2008-01-14  Roland Mas  <lolando@debian.org>

	* www/export/rss20_news.php: Fixed typo that prevented the RSS
	feed from returning any results.

2008-01-13  Roland Mas  <lolando@debian.org>

	* common/include/Plugin.class.php: Removed two unused functions.

2008-01-11  Roland Mas  <lolando@debian.org>

	* www/export/*.php: The previous validation didn't work since
	we're no longer using register_globals=on.  Fixed that.

	* www/export/*.php: Fixed a bunch of PHP warnings.

2008-01-09  Roland Mas  <lolando@debian.org>

	* www/export/rss_sfprojects.php: Validate input to prevent an SQL
	injection.
	* www/export/forum.php: Ditto.
	* www/export/rss20_newreleases.php: Ditto.
	* www/export/rss20_news.php: Ditto.
	* www/export/rss20_projects.php: Ditto.
	* www/export/rss_sfnewreleases.php: Ditto.
	* www/export/rss_sfnews.php: Ditto.

2007-12-12  Roland Mas  <lolando@debian.org>

	* www/tracker/taskmgr.php: Fetch project_task_id parameter from
	request.

	* deb-specific/db-upgrade.pl: Unregister obsolete themes, and
	register new ones.

	* setup: Look for CVS and Subversion repositories in
	/var/lib/gforge/chroot, if they're not found in the root
	directory.

2007-12-11  Roland Mas  <lolando@debian.org>

	* common/include/Group.class.php: Include realname and username of
	the person who requests a project in the email sent to the admins.
	* www/admin/approve-pending.php: Ditto, in the list of pending
	projects.

2007-12-06  Roland Mas  <lolando@debian.org>

	* plugins/scmsvn/cronjobs/snapshots.sh: Change interpreter to bash
	since the script uses behaviour not implemented by all /bin/sh
	variants.
	* plugins/scmcvs/cronjobs/snapshots.sh: Ditto.

2007-11-30  Roland Mas  <lolando@debian.org>

	* www/admin/useredit.php: Removed undefined variable warning.

	* www/account/register.php: Fix a syntax error, use appropriate