@@ -26,6 +26,10 @@
 
 	* common/include/Plugin.class.php: Removed two unused functions.
 
+	* common/include/utils.php: New functions util_make_url and
+	util_make_link, whose goal is to provide a central place where URL
+	scheme is implemented.
+
 2008-01-11  Roland Mas  <lolando@debian.org>
 
 	* www/export/*.php: The previous validation didn't work since
